# flam_rnd

./: LICENSE  README.md
RealTimeEdgeDetectionViewer/: settings.gradle
RealTimeEdgeDetectionViewer/app/: build.gradle
RealTimeEdgeDetectionViewer/app/src/androidTest/java/com/example/real_timeedgedetectionviewer/: ExampleInstrumentedTest.java
RealTimeEdgeDetectionViewer/app/src/main/: AndroidManifest.xml
RealTimeEdgeDetectionViewer/app/src/main/cpp/: CMakeLists.txt  GLRendererNative.cpp  ImageProcessor.cpp  native-lib.cpp
RealTimeEdgeDetectionViewer/app/src/main/cpp/shaders/: fragment_shader.glsl  vertex_shader.glsl
RealTimeEdgeDetectionViewer/app/src/main/java/com/example/real_timeedgedetectionviewer/: CameraHelper.java  GLRenderer.java  GLView.java  MainActivity.java
RealTimeEdgeDetectionViewer/app/src/main/res/layout/: activity_main.xml
RealTimeEdgeDetectionViewer/app/src/main/res/values/: strings.xml  themes.xml
RealTimeEdgeDetectionViewer/app/src/main/res/values-night/: themes.xml
RealTimeEdgeDetectionViewer/app/src/test/java/com/example/real_timeedgedetectionviewer/: ExampleUnitTest.java
RealTimeEdgeDetectionViewer/gradle/wrapper/: gradle-wrapper.properties
